charts/mediaserver/codex/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: codex
  labels:
    app: codex
    app.kubernetes.io/name: codex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: codex
      app.kubernetes.io/name: codex
  template:
    metadata:
      labels:
        app: codex
        app.kubernetes.io/name: codex
    spec:
      containers:
        - name: codex
          image: ajslater/codex:1.9.14
          imagePullPolicy: IfNotPresent
          readinessProbe:
            tcpSocket:
              port: 9810
            initialDelaySeconds: 10
            periodSeconds: 30
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
          ports:
            - name: http
              containerPort: 5656
              protocol: TCP
          volumeMounts:
            - name: mediaserver-volume
              mountPath: "/config"
              subPath: "config/codex"
            - name: mediaserver-volume
              mountPath: "/comics"
              subPath: "media/comics"
      volumes:
        - name: mediaserver-volume
          hostPath:
            path: /mnt/media
