charts/mediaserver/codex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: codex
  labels:
    app: codex
spec:
  type: ClusterIP
  ports:
    - port: 9810
      targetPort: 9810
      protocol: TCP
      name: http
  selector:
    app: codex
