charts/mediaserver/codex/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: codex
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/icon: codex.png
    gethomepage.dev/name: Codex
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  hostnames:
  - codex.int.imdevinc.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: codex
      namespace: mediaserver
      port: 9810
